--- a/index.html
+++ b/index.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanity - Portfolio</title>
     <link rel="stylesheet" href="css\styles.css">
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Sanity</h1>
-        <p>Security Student</p>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
-        </nav>
+      <h1>Sanity</h1>
+      <p id="title-header">Security Student</p>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="notes.html">Notes</a>
+      </nav>
     </header>
 
-    <section>
-        <h2>About Me</h2>
-        <p>
-            Welcome to my portfolio! I am an aspiring Cyber Security analyst, currently studying Network and Security Engineering at the Hanze in Groningen, the Netherlands.
-        </p>
+    <section id="about-me-home">
+      <h2>About Me</h2>
+      <p>
+        Welcome to my portfolio! I am an aspiring Cyber Security analyst, currently studying Network and Security Engineering at the Hanze in Groningen, the Netherlands.
+      </p>
     </section>
 
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li>
-                <strong>University project repo</strong> General repo for all my university work <a href="https://github.com/SanityCS/UniProjects">GitHub</a>
-            </li>
-	    <li>
-                <strong>Discord Library</strong> Discord library to learn how to do programming <a href="https://github.com/SanityCS/saniLib">GitHub</a>
-            </li>
-        </ul>
+    <section id="projects-home">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>University project repo</strong> General repo for all my university work <a href="https://github.com/SanityCS/UniProjects">GitHub</a>
+        </li>
+        <li>
+          <strong>Discord Library</strong> Discord library to learn how to do programming <a href="https://github.com/SanityCS/saniLib">GitHub</a>
+        </li>
+      </ul>
     </section>
 
-    <section>
-        <h2>Contact</h2>
-        <p>
-            Feel free to contact me! You can reach me via email at <a href="mailto:sanitycs@proton.me">sanitycs@proton.me</a>.
-        </p>
+    <section id="contact-home">
+      <h2>Contact</h2>
+      <p>
+        Feel free to contact me! You can reach me via email at <a href="mailto:sanitycs@proton.me">sanitycs@proton.me</a>.
+      </p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Sanity. All rights reserved.</p>
+      <p>&copy; 2024 Sanity. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 
 </html>
