why do i like front-end?

--- a/about.html
+++ b/about.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me - Sanity</title>
+    <title>Sanity - About Me</title>
     <link rel="stylesheet" href="css\styles.css">
-</head>
+    <link rel="icon" href="media\website_icon.png" type="image/png">
+  </head>
 
-<body>
+  <body id="about-body">
     <header>
-        <h1>Sanity</h1>
-        <p>Security Student</p>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
-        </nav>
+      <h1>Sanity</h1>
+      <p>Security Student</p>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="notes.html">Notes</a>
+      </nav>
     </header>
 
     <section>
-        <h2>About Me</h2>
-        <p>
+      <h2>About Me</h2>
+      <p>
         Hey there! I'm a 19-year-old on a mission in the world of cybersecurity. Born with a natural curiosity for all things tech, I've started my journey to study about protecting and securing tech.
 
-        </p>
-        <p>
-            Here are a few key points about me:
-        </p>
-        <ul>
-            <li>Currently studying for a degree in Network and Security Engineering</li>
-            <li>Experience with Cisco systems</li>
-            <li>Really passionate about learning new technologies</li>
-            <li>Excellent problem-solving and communication skills</li>
-        </ul>
-        <p>
-            Feel free to explore my portfolio to learn more about my projects and skills!
-        </p>
+      </p>
+      <p>
+        Here are a few key points about me:
+      </p>
+      <ul>
+        <li>- Currently studying for a degree in Network and Security Engineering</li>
+        <li>- Experience with Cisco systems</li>
+        <li>- Really passionate about learning new technologies</li>
+        <li>- Excellent problem-solving and communication skills</li>
+        <li>- Massive love for cryptography, hasing and encryption</li>
+      </ul>
+      <p>
+        Feel free to explore my portfolio to learn more about my projects and skills!
+      </p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Sanity. All rights reserved.</p>
+      <p>&copy; 2024 Sanity. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 
 </html>
