--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanity - Portfolio</title>
-    <link rel="stylesheet" href="css\styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="media/website_icon.png" type="image/png">
   </head>
 
-  <body>
+  <body id="homepage-body">
     <header>
       <h1>Sanity</h1>
       <p id="title-header">Security Student</p>
@@ -31,10 +32,18 @@
       <h2>Projects</h2>
       <ul>
         <li>
-          <strong>University project repo</strong> General repo for all my university work <a href="https://github.com/SanityCS/UniProjects">GitHub</a>
+          <strong>University project repo</strong> 
+          <a href="https://github.com/SanityCS/UniProjects" target="_blank">
+            <img src="media/github-mark-white.svg" alt="GitHub Icon" width="16" height="16">
+          </a>
+          <p class="project-description"> General repo for all my university work. </p>
         </li>
         <li>
-          <strong>Discord Library</strong> Discord library to learn how to do programming <a href="https://github.com/SanityCS/saniLib">GitHub</a>
+          <strong>Discord Library</strong>
+          <a href="https://github.com/SanityCS/saniLib" target="_blank">
+            <img src="media/github-mark-white.svg" alt="GitHub Icon" width="16" height="16">
+          </a>
+          <p class="project-description"> Discord library to learn how to program </p>
         </li>
       </ul>
     </section>
