--- a/infrastructure_notes.html
+++ b/infrastructure_notes.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanity - Notes</title>
+    <title>Sanity - Infrastructure Notes</title>
     <link rel="stylesheet" href="css\styles.css">
     <link rel="icon" href="media\website_icon.png" type="image/png">
   </head>
 
-  <body id="notes-body">
+  <body id="inf-notes-body">
     <header>
       <h1>Sanity</h1>
       <p>Security Student</p>
@@ -18,16 +18,11 @@
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
         <a href="notes.html">Notes</a>
-      </nav>
-    </header>
-
-    <section>
-      <a href="infrastructure_notes.html">Infrastructure</a>
-    </section>
-
-
-    <footer>
-      <p>&copy; 2024 Sanity. All rights reserved.</p>
-    </footer>
+        <section id="inf-notes-s1">
+          <li><a href="network_notes.html">What is a network?</a></li>
+        </section>
+        <footer>
+          <p>&copy; 2024 Sanity. All rights reserved.</p>
+        </footer>
   </body>
 
