--- a/network_notes.html
+++ b/network_notes.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanity - Notes</title>
+    <title>Sanity - Networks</title>
     <link rel="stylesheet" href="css\styles.css">
     <link rel="icon" href="media\website_icon.png" type="image/png">
   </head>
 
-  <body id="notes-body">
+  <body id="network-notes-body">
     <header>
       <h1>Sanity</h1>
       <p>Security Student</p>
@@ -21,11 +21,15 @@
       </nav>
     </header>
 
-    <section>
-      <a href="infrastructure_notes.html">Infrastructure</a>
+    <section id="network-notes-s1">
+      <p>
+        <a href="infrastructure_notes.html" class="back-link"> &#8592; Infrastructure Notes</a>
+      <p>
+        Fault tolerance
+        <br>- Not being reliant on 1 cable, in case it gets sabotaged it will always have backup cables</br>
+
+      </p>
     </section>
-
-
     <footer>
       <p>&copy; 2024 Sanity. All rights reserved.</p>
     </footer>
