--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sanity - Notes</title>
+    <title>Sanity - Projects</title>
     <link rel="stylesheet" href="css\styles.css">
     <link rel="icon" href="media\website_icon.png" type="image/png">
   </head>
 
-  <body id="notes-body">
+  <body id="projects-body">
     <header>
       <h1>Sanity</h1>
       <p>Security Student</p>
@@ -22,7 +22,6 @@
     </header>
 
     <section>
-      <a href="infrastructure_notes.html">Infrastructure</a>
     </section>
 
 
