front-end engineers would have me executed

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <p>
         Here are a few key points about me:
       </p>
-      <ul>
+      <ul id="about-keypoints">
         <li>- Currently studying for a degree in Network and Security Engineering</li>
         <li>- Experience with Cisco systems</li>
         <li>- Really passionate about learning new technologies</li>
