Dedicated to my girlfriend <3

--- a/notes.html
+++ b/notes.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanity - Notes</title>
-    <link rel="stylesheet" href="css\styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="icon" href="media\website_icon.png" type="image/png">
   </head>
 
-  <body id="notes-body">
-    <header>
-      <h1>Sanity</h1>
+  <body id="notes-body" class="font-sans bg-gray-500">
+    <header class="bg-gray-900 text-white text-center py-4">
+      <h1 class="text-2x1">Sanity</h1>
       <p>Security Student</p>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="notes.html">Notes</a>
+        <a href="index.html" class="text-white hover:underline">Home</a>
+        <a href="about.html" class="text-white hover:underline ml-4">About</a>
+        <a href="projects.html" class="text-white hover:underline ml-4">Projects</a>
+        <a href="notes.html" class="text-white hover:underline ml-4">Notes</a>
       </nav>
     </header>
 
-    <section>
-      <a href="infrastructure_notes.html">Infrastructure</a>
+    <section class="max-w-screen-lg mx-auto my-8 px-8 py-6 bg-gray-800 rounded-md shadow-md">
+      <a href="infrastructure_notes.html" class="text-white mt-4">Infrastructure</a>
     </section>
 
 
-    <footer>
+    <footer class="text-white text-center py-4 bg-gray-700 mt-8">
       <p>&copy; 2024 Sanity. All rights reserved.</p>
     </footer>
   </body>
