--- a/about.html
+++ b/about.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanity - About Me</title>
-    <link rel="stylesheet" href="css\styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="icon" href="media\website_icon.png" type="image/png">
-  </head>
+</head>
 
-  <body id="about-body">
-    <header>
-      <h1>Sanity</h1>
-      <p>Security Student</p>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="notes.html">Notes</a>
-      </nav>
+<body id="about-body" class="font-sans bg-purple-200 flex flex-col h-screen">
+    <header class="bg-gray-900 text-white text-center py-4">
+        <h1 class="text-2xl">Sanity</h1>
+        <p class="text-sm">Security Student</p>
+        <nav>
+            <a href="index.html" class="text-white hover:underline">Home</a>
+            <a href="about.html" class="text-white hover:underline ml-4">About</a>
+            <a href="projects.html" class="text-white hover:underline ml-4">Projects</a>
+            <a href="notes.html" class="text-white hover:underline ml-4">Notes</a>
+        </nav>
     </header>
 
-    <section>
-      <h2>About Me</h2>
-      <p>
-        Hey there! I'm a 19-year-old on a mission in the world of cybersecurity. Born with a natural curiosity for all things tech, I've started my journey to study about protecting and securing tech.
-
-      </p>
-      <p>
-        Here are a few key points about me:
-      </p>
-      <ul id="about-keypoints">
-        <li>- Currently studying for a degree in Network and Security Engineering</li>
-        <li>- Experience with Cisco systems</li>
-        <li>- Really passionate about learning new technologies</li>
-        <li>- Excellent problem-solving and communication skills</li>
-        <li>- Massive love for cryptography, hasing and encryption</li>
-      </ul>
-      <p>
-        Feel free to explore my portfolio to learn more about my projects and skills!
-      </p>
+    <section class="mx-auto mt-8 mb-4 px-8 py-4 bg-gray-800 rounded-md shadow-md">
+        <h2 class="text-2xl text-purple-500 mb-4">About Me</h2>
+        <p class="text-white mb-4">
+            Hey there! I'm a 20-year-old on a mission in the world of cybersecurity. Born with a natural curiosity for all things tech, 
+            I've started my journey to study about protecting and securing tech.
+        </p>
+        <p class="text-white mb-4">
+            Here are a few key points about me:
+        </p>
+        <ul id="about-keypoints" class="list-disc pl-4 text-white mb-4">
+            <li>Currently studying for a degree in Network and Security Engineering</li>
+            <li>Experience with Cisco systems</li>
+            <li>Really passionate about learning new technologies</li>
+            <li>Excellent problem-solving and communication skills</li>
+            <li>Massive love for cryptography, hashing, and encryption</li>
+        </ul>
+        <p class="text-white mt-4">
+            Feel free to explore my portfolio to learn more about my projects and skills!
+        </p>
+        <p class="text-white text-sm mt-20 text-center">
+            I would like to thank my amazing girlfriend for all her support in my craft
+        </p>
+        <p class="text-white text-sm text-center">
+            and giving me the constant motivation to keep striving to get better
+        </p>
+        <p class="text-purple-600 mt-5 text-lg text-center">
+            I love you Mae <3
+        </p>
     </section>
 
-    <footer>
-      <p>&copy; 2024 Sanity. All rights reserved.</p>
+    <footer class="mt-auto bg-gray-900 text-white text-center py-4">
+        <p>&copy; 2024 Sanity. All rights reserved.</p>
     </footer>
-  </body>
+</body>
 
 </html>
