--- a/network_notes.html
+++ b/network_notes.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanity - Networks</title>
-    <link rel="stylesheet" href="css\styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="icon" href="media\website_icon.png" type="image/png">
   </head>
 
