--- a/about.html
+++ b/about.html
@@ -40,7 +40,10 @@
         <p class="text-white mt-4">
             Feel free to explore my portfolio to learn more about my projects and skills!
         </p>
-        <p class="text-white text-sm mt-20 text-center">
+        <p class="text-white text-md mt-10 text-center">
+            Special Gratitude
+        </p>
+        <p class="text-white text-sm mt-5 text-center">
             I would like to thank my amazing girlfriend for all her support in my craft
         </p>
         <p class="text-white text-sm text-center">
